# markhor

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
cli/: Cargo.toml  README.md
cli/src/: lib.rs  main.rs
core/: Cargo.toml  README.md
core/src/: chunking.rs  convert.rs  document.rs  event.rs  lib.rs
core/src/chat/: chat.rs  error.rs  mod.rs  prompter.rs
core/src/embedding/: chunker.rs  embedder.rs  error.rs  mod.rs  vector_store.rs
core/src/events/: mod.rs
core/src/extension/: active_extension.rs  extension_set.rs  mod.rs
core/src/extensions/: mod.rs
core/src/job/: chat.rs  mod.rs  search.rs
core/src/markdown/: mod.rs  xml.rs
core/src/model/: chat.rs  embedding.rs  mod.rs
core/src/storage/: document.rs  file.rs  folder.rs  metadata.rs  mod.rs  workspace.rs
core/src/storage/metadata/: extension_data.rs  mod.rs
core/src/tool/: mod.rs
core/tests/: chat_model.rs  workspace_integration.rs
extensions/: Cargo.toml  README.md
extensions/src/: lib.rs
extensions/src/chat/gemini/: mod.rs
extensions/src/chunking/: mod.rs
extensions/src/chunking/markdown/: chunker.rs  mod.rs
extensions/src/chunking/plaintext/: mod.rs
extensions/src/cli/: mod.rs  prompter.rs
extensions/src/embedding/gemini/: embedder.rs  helpers.rs  mod.rs
extensions/src/gemini/: chat.rs  embed.rs  error.rs  mod.rs  shared.rs
extensions/src/ocr/: mod.rs
extensions/src/ocr/mistral/: client.rs  converter.rs  error.rs  helpers.rs  mod.rs
extensions/src/plugin/python/stdio/: chat.rs  error.rs  mod.rs  plugin.rs  wrapper.rs
extensions/tests/: chat-gemini.rs  gemini-embed.rs  gemini.rs  mistral-ocr.rs  python-stdio.rs
extensions/tests/common/: Lorem ipsum with Mona Lisa.docx  mod.rs
extensions/tests/python-chat-plugin/: chat_gemini.py  plugin_core.py  requirements.txt
gui/: Cargo.toml
gui/src/: main.rs
markhor/: Cargo.toml  README.md
markhor/src/: cli.rs  lib.rs  main.rs
markhor/src/app/: chat.rs  mod.rs
markhor/src/commands/: mod.rs
tests/: integration_test.rs
util/: Cargo.toml  README.md
