[package]
name = "markhor_core"
edition = "2024"

[dependencies]
crossbeam-skiplist = "0.1.3"
dynosaur = "0.2.0"
mime = "0.3.17"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1"
tokio = { version = "1.44.1", features = ["fs", "macros", "rt-multi-thread", "sync", "io-util"] }
tracing = "0.1.41"
uuid = { version = "1.16.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.19.1"
