[package]
name = "markhor_core"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Core library for Markhor, a project connecting AI models, documents, and workflows for knowledge work"
repository = "https://github.com/dtrlanz/markhor"
version.workspace = true

[dependencies]
async-trait = "0.1.88"
crossbeam-skiplist = "0.1.3"
dynosaur = "0.2.0"
futures = "0.3.31"
mime = "0.3.17"
regex = "1.11.1"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1"
tokio = { version = "1.44.1", features = ["fs", "macros", "rt-multi-thread", "sync", "io-util"] }
tracing = "0.1.41"
trait-variant = "0.1.2"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
clap = { version = "4.5.35", features = ["cargo"] }
pulldown-cmark = "0.13.0"


[dev-dependencies]
tempfile = "3.19.1"
tokio = { version = "1.44.1", features = ["fs", "macros", "rt-multi-thread", "sync", "io-util", "time"] }
