[package]
name = "markhor_extensions"
edition = "2024"
version.workspace = true

[dependencies]
markhor_core = { path = "../core" }
tokio = { version = "1", features = ["full"] } # Need "rt-multi-thread", "macros", "process", "io-util"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
thiserror = "1"
async-once-cell = "0.5.4"
tracing = "0.1.41"
dotenv = "0.15.0"
async-trait = "0.1.88"

[dev-dependencies]
tracing-subscriber = "0.3.19"

