[package]
name = "markhor_extensions"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Extensions for Markhor, a project connecting AI models, documents, and workflows for knowledge work"
repository = "https://github.com/dtrlanz/markhor"
version.workspace = true
exclude = [
    "tests/common/*",
    "tests/python-chat-plugin/*",
]

[dependencies]
markhor_core = { path = "../core", version = "0.1.0-alpha.0.1" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] } # Needed for ReaderStream
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
thiserror = "1"
async-once-cell = "0.5.4"
tracing = "0.1.41"
dotenv = "0.15.0"
async-trait = "0.1.88"
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ["json", "multipart", "stream"] }
base64 = "0.22.1"
uuid = "1.16.0"
url = { version = "2.5", features = ["serde"] }
tempfile = "3.19.1"
mime = "0.3.17"

[dev-dependencies]
tracing-subscriber = "0.3.19"

