[package]
name = "markhor"
edition = "2024"
version.workspace = true

[dependencies]
markhor_core = { path = "../core", version = "0.1.0-alpha.0.1" }
markhor_extensions = { path = "../extensions", version = "0.1.0-alpha.0.1" }
async-once-cell = "0.5.4"
clap = { version = "4.5.35", features = ["derive", "env"] }
anyhow = "1.0.97"
tokio = { version = "1.44.2", features = ["full"] }
